--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:unit": "vitest --environment jsdom --root src/",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
-    "lint": "eslint . --fix"
+    "lint": "eslint . --fix",
+    "backend": "json-server --watch ./db/db.json --port 3001"
   },
   "dependencies": {
     "@tanstack/vue-query": "^4.22.0",
@@ -27,6 +28,7 @@
     "@vue/tsconfig": "^0.1.3",
     "eslint": "^8.32.0",
     "jsdom": "^21.0.0",
+    "json-server": "^0.17.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.21",
     "postcss-preset-env": "^7.8.3",
