--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.2.3",
     "pinia": "^2.0.28",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-toastify": "^0.0.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.34.1",
